updated readme including taggit and ckeditor to be installed

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = dfsp_saas
-version = 0.1
-description = A Django app to rub blogs.
+name = dfsaas_blog
+version = 0.1.2
+description = A Django app to run blogs.
 long_description = file: README.rst
 url = https://www.djangoforsaas.com/
 author = Konstantin Pavlovsky
@@ -10,7 +10,7 @@ license-file = LICENCE
 classifiers =
     Environment :: Web Environment
     Framework :: Django
-    Framework :: Django :: 3.2
+    Framework :: Django :: 3.0
     Framework :: Django :: 3.1
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
